# media-reader

./: CMakeLists.txt  README.md
examples/main/: CMakeLists.txt  main.cpp
examples/main/glad/include/glad/: egl.h  gl.h
examples/main/glad/src/: egl.c
include/: binary_utils.h  filestream.h  media-reader.h  mp3.h  mp4.h
src/: media-reader.cpp  mp3.cpp  mp4.cpp
src/mp3/: decode.cpp  decode.h  huffman.h  tables.h
